# llm-dialogue

./: .env.example  .gitignore  README.md  pyproject.toml
experiments/: example.toml
src/llm_dialogue/: __init__.py  cli.py  client.py  config.py  conversation.py  markdown.py
tests/: test_conversation.py
