[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-dialogue-experiments"
version = "0.1.0"
description = "CLI for running direct turn-based conversations between two LLM agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.scripts]
llm-dialogue = "llm_dialogue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
